Bug 341161: nsXPInstallManager doesnt shutdown correctly, patch by Dave Townsend <mossop.bugzilla@blueprintit.co.uk>, r+sr=dveditz