xpinstall/src/nsXPInstallManager.cpp
@@ -170,6 +170,8 @@ nsXPInstallManager::InitManagerWithHashes(const PRUnichar **aURLs,
     if (!mTriggers)
         return NS_ERROR_OUT_OF_MEMORY;
 
+    mNeedsShutdown = PR_TRUE;
+
     for (PRUint32 i = 0; i < aURLCount; ++i) 
     {
         nsXPITriggerItem* item = new nsXPITriggerItem(0, aURLs[i], nsnull,
@@ -178,6 +180,7 @@ nsXPInstallManager::InitManagerWithHashes(const PRUnichar **aURLs,
         {
             delete mTriggers; // nsXPITriggerInfo frees any alloc'ed nsXPITriggerItems
             mTriggers = nsnull;
+            Shutdown();
             return NS_ERROR_OUT_OF_MEMORY;
         }
         mTriggers->Add(item);
@@ -189,10 +192,14 @@ nsXPInstallManager::InitManagerWithHashes(const PRUnichar **aURLs,
     {
         delete mTriggers;
         mTriggers = nsnull;
+        Shutdown();
         return rv;
     }
 
-    return Observe(aListener, XPI_PROGRESS_TOPIC, NS_LITERAL_STRING("open").get());
+    rv = Observe(aListener, XPI_PROGRESS_TOPIC, NS_LITERAL_STRING("open").get());
+    if (NS_FAILED(rv))
+        Shutdown();
+    return rv;
 }
 
 
@@ -546,11 +553,11 @@ NS_IMETHODIMP nsXPInstallManager::Observe( nsISupports *aSubject,
             if (dlg)
             {
                 // --- create and save a proxy for the dialog
-                rv = NS_GetProxyForObject( NS_PROXY_TO_MAIN_THREAD,
-                                           NS_GET_IID(nsIXPIProgressDialog),
-                                           dlg,
-                                           NS_PROXY_SYNC | NS_PROXY_ALWAYS,
-                                           getter_AddRefs(mDlg) );
+                NS_GetProxyForObject( NS_PROXY_TO_MAIN_THREAD,
+                                      NS_GET_IID(nsIXPIProgressDialog),
+                                      dlg,
+                                      NS_PROXY_SYNC | NS_PROXY_ALWAYS,
+                                      getter_AddRefs(mDlg) );
             }
 
             // -- get the ball rolling
